Update rootfs packageset to include wireless-tools Configure resolv.conf umi-x2: Add wifi package
Signed-off-by: Andrew Andrianov <andrew@ncrmnt.org>

--- a/rootfs/debian-basic.conf
+++ b/rootfs/debian-basic.conf
@@ -20,9 +20,8 @@ bootstrap=base
 aptsources=base
 
 [base]
-packages=systemd apt aptitude apt-transport-https ca-certificates gnupg wget curl ifupdown isc-dhcp-client openssh-server net-tools nano apt-utils inetutils-ping fbset psmisc libelf1 gawk u-boot-tools mtd-utils locales kmod i2c-tools
+packages=systemd unzip apt aptitude apt-transport-https ca-certificates gnupg wget curl ifupdown isc-dhcp-client openssh-server net-tools nano apt-utils inetutils-ping fbset psmisc libelf1 gawk u-boot-tools mtd-utils locales kmod i2c-tools wireless-tools wpasupplicant hostapd
 source=http://mirror.yandex.ru/debian
 components=main contrib non-free
 keyring=debian-archive-keyring
 suite=stretch
-
