--- a/rootfs/debian-devel.conf
+++ b/rootfs/debian-devel.conf
@@ -1,13 +1,16 @@
 [General]
-include=debian-base.conf
-bootstrap=base development debugger
-aptsources=base development debugger
+include=debian-basic.conf
+bootstrap=base development debugger jre
+aptsources=base development debugger jre
 
 [debugger]
 packages=gdb strace
 suite=stretch
 
 [development]
-packages=build-essential libdaemon-dev libelfg0-dev lua5.2 liblua5.2-dev pkg-config libusb-1.0-0-dev aptitude pbuilder sudo debhelper devscripts fakeroot multistrap m4 git cmake bc lzop gpgv
+packages=build-essential libdaemon-dev lua5.2 liblua5.2-dev pkg-config libusb-1.0-0-dev aptitude pbuilder sudo debhelper devscripts fakeroot multistrap m4 git cmake bc lzop gpgv
 suite=stretch
 
+[jre]
+packages=default-jre-headless
+suite=stretch
