rootfs: Add iotop to basic packages
Signed-off-by: Andrew Andrianov <andrew@ncrmnt.org>

--- a/rootfs/debian-basic.conf
+++ b/rootfs/debian-basic.conf
@@ -20,7 +20,7 @@ bootstrap=base
 aptsources=base
 
 [base]
-packages=systemd unzip apt aptitude apt-transport-https ca-certificates gnupg wget curl ifupdown isc-dhcp-client openssh-server net-tools nano apt-utils inetutils-ping fbset psmisc libelf1 gawk u-boot-tools mtd-utils locales kmod i2c-tools wireless-tools wpasupplicant hostapd
+packages=systemd unzip apt aptitude apt-transport-https ca-certificates gnupg wget curl ifupdown isc-dhcp-client openssh-server net-tools nano apt-utils inetutils-ping fbset psmisc libelf1 gawk u-boot-tools mtd-utils locales kmod i2c-tools wireless-tools wpasupplicant hostapd iotop
 source=http://mirror.yandex.ru/debian
 components=main contrib non-free
 keyring=debian-archive-keyring
