Dockerfile: Add cpio
Signed-off-by: Andrew Andrianov <andrew@ncrmnt.org>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -13,7 +13,7 @@ RUN apt-get -y upgrade
 RUN apt-get -y install apt-transport-https apt-utils
 
 RUN apt-get update
-RUN apt-get -y --force-yes install multistrap sudo git build-essential devscripts wget mtd-utils gpgv
+RUN apt-get -y --force-yes install multistrap sudo git build-essential devscripts wget mtd-utils gpgv cmake cpio lzop
 
 ENV PATH  /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 ENV HOME  /var/lib/jenkins
@@ -24,8 +24,8 @@ RUN rm /etc/apt/apt.conf.d/docker-gzip-indexes
 # Linaro abe build deps
 RUN apt-get install -y --force-yes bison automake autoconf libtool libncurses-dev gawk gcc-multilib g++-multilib zlib1g-dev flex autogen texinfo libpython2.7-dev dejagnu mingw-w64 zip
 
-#Qemu & cmake
-RUN apt-get install -y --force-yes  qemu-user-static cmake
+#qemu user emulation support
+RUN apt-get install -y --force-yes  qemu-user-static
 
 # Create passwd and group if needed, make them world-writable
 # Jenkins will need to fill in uid/gid there.
